...
                <outlet property="quickCommentsLabel" destination="j4P-EU-Uso" id="TSm-DN-QeM"/>
                <outlet property="window" destination="F0z-JX-Cv5" id="gIp-Ho-8D9"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <window title="Clocker Feedback" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
            <rect key="contentRect" x="437" y="172" width="319" height="456"/>
            <rect key="screenRect" x="0.0" y="0.0" width="1440" height="875"/>
            <view key="contentView" id="se5-gp-TjO">
                <rect key="frame" x="0.0" y="0.0" width="319" height="456"/>
                <autoresizingMask key="autoresizingMask"/>
...
                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="szs-8j-SMN">
                        <rect key="frame" x="92" y="13" width="84" height="33"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="21" id="3Et-2P-JlO"/>
                            <constraint firstAttribute="width" constant="70" id="CFb-9Q-Mbd"/>
                        </constraints>
                        <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" borderStyle="border" allowsMixedState="YES" imageScaling="proportionallyDown" inset="2" id="BNp-eQ-I1S">
                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                            <font key="font" size="13" name="Avenir-Book"/>
                            <string key="keyEquivalent" base64-UTF8="YES">
Gw
</string>
                        </buttonCell>
...
                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sJq-1o-Bft">
                        <rect key="frame" x="170" y="13" width="136" height="33"/>
                        <constraints>
                            <constraint firstAttribute="width" constant="122" id="IU8-yi-rFV"/>
                            <constraint firstAttribute="height" constant="21" id="M7a-oP-ZqD"/>
                        </constraints>
                        <buttonCell key="cell" type="push" title="Send Feedback" bezelStyle="rounded" alignment="center" borderStyle="border" allowsMixedState="YES" imageScaling="proportionallyDown" inset="2" id="vrZ-QX-vjo">
                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                            <font key="font" size="13" name="Avenir-Book"/>
                            <string key="keyEquivalent" base64-UTF8="YES">
DQ
</string>
                        </buttonCell>
...
