...
    private var themeDidChangeNotification: NSObjectProtocol?
    private var feedbackWindow: AppFeedbackWindowController?

    override func viewDidLoad() {
        super.viewDidLoad()

        privateFeedback.setAccessibilityIdentifier("ClockerPrivateFeedback")

        let appDisplayName = Bundle.main.object(forInfoDictionaryKey: "CFBundleDisplayName") ?? "Clocker"
        let shortVersion = Bundle.main.object(forInfoDictionaryKey: "CFBundleShortVersionString") ?? "N/A"
        let longVersion = Bundle.main.object(forInfoDictionaryKey: "CFBundleVersion") ?? "N/A"

        versionField.stringValue = "\(appDisplayName) \(shortVersion) (\(longVersion))"
...
